--- a/PCBmeas.tex
+++ b/PCBmeas.tex
@@ -53,8 +53,8 @@ It can be seen, that the noise in spectrum is much lesser than in case of ORTEC 
 \end{figure}
 
 
-\section{Scintillator and gaseous detector measurement}
-To measure the scintillator and the gaseous detector relative efficiency the same setup was used. As a gaseous detector was used tube LND45479, optimized for the 14.4 keV detection with amplification electronics based also on Cremat modules. In case of scintillator detector, our choice was photomultiplier tube R6095 \cite{R6095} with C9028-01 socket \cite{C9028}. As a scintillator crystal was used 0.4 mm thick YAP(Ce) and the amplification is done by the custom made amplifier\cite{STEJSKAL2019thesis}.
+\section{Scintillator and gas detector measurement}
+To measure the scintillator and the gas detector relative efficiency the same setup was used. As a gas detector was used tube LND45479, optimized for the 14.4 keV detection with amplification electronics based also on Cremat modules. In case of scintillator detector, our choice was photomultiplier tube R6095 \cite{R6095} with C9028-01 socket \cite{C9028}. As a scintillator crystal was used 0.4 mm thick YAP(Ce) and the amplification is done by the custom made amplifier\cite{STEJSKAL2019thesis}.
 
 \begin{figure}[H]
 \centering
@@ -73,14 +73,14 @@ To measure the scintillator and the gaseous detector relative efficiency the sam
 
 
 %In case of both detectors, both 14.4 keV and 6.4 keV peaks are fully observable. 
-In spectra of gaseous detector, three narrow peaks can be observed - 14.4 keV peak and two small peaks - 6.4 keV and 19.5 keV. It also has a high level of Compton continuum.
+In spectra of gas detector, three narrow peaks can be observed - 14.4 keV peak and two small peaks - 6.4 keV and 19.5 keV. It also has a high level of Compton continuum.
 The scintillator sees both 6.4 keV and 14.4 keV full energy peaks. However, its energy resolution is much worse - both peaks are noticeably wider and they overlap each other. 
 
 \section{Results}
 The sum of total counts for 14.4 keV and 6.4 keV full energy peaks along with the relative detection efficiency with respect to the most effective detector was calculated in the following way:
 
 \begin{enumerate}
-\item From the spectra without filter is subtracted the spectra with Cu filter. This provides a sufficient elimination of Compton continuum caused by 122 keV photons. 
+\item From the spectra without filter is subtracted the spectra with Cu filter. This provides a sufficient elimination of Compton continuum caused by 122.1 keV photons. 
 \item The spectra obtained in previous step is fitted by a sum of Gaussians. Spectra of Si PIN and scintillator were fitted by sum of 2 Gaussians and in case of gas, the sum of 3 Gaussians is used.
 \item The value of absolute counts (Gaussian's area) for the given energy spectra is calculated from the fit parameters with the uncertainties also taken from the fit.
 \end{enumerate}
