--- a/PINtesting.tex
+++ b/PINtesting.tex
@@ -114,10 +114,10 @@ From the S14605 capacity and dark current graphs (data-sheet \ref{datS14605}) ca
 
 \par
 
-Due to the first peak's attenuation by mentioned filters it can be considered as 14.4 keV full energy peak. The 21.9 keV peak originates from characteristic RTG of rhodium matrice. 59.4 and 67.5 keV 85.3 keV is characteristic RTG of lead shielding. The last two peaks (123.0 keV, 137.7 keV) are from $^{57}$Co. It can be seen that the full energy detection efficiency of higher energies (122.1 keV) is very small and that the Compton scattering is preferred interaction effect inside detector at these energies, which results into expected Compton edge. The expected peak of 6.4 keV was unfounded possibly due to the insufficient SNR. The modular ORTEC setup do not allows any further upgrades, so the only way to improve SNR is to integrate the spectrometric chain into PCB. 
+Due to the first peak's attenuation by mentioned filters, this peak is determined as 14.4 keV full energy peak. The 21.9 keV peak originates from characteristic x-rays of rhodium matrice. 59.4 and 67.5 keV 85.3 keV is characteristic x-rays of lead shielding. The last two peaks (123.0 keV, 137.7 keV) are from $^{57}$Co. It can be seen that the full energy detection efficiency of higher energies (122.1 keV) is very small and that the Compton scattering is preferred interaction effect inside detector at these energies, which results into expected Compton edge. The expected peak of 6.4 keV hidden in the electronic noise. The modular ORTEC setup do not allows any further upgrades, so the only way to improve SNR is to integrate the spectrometric chain into PCB. 
 
 \subsection{BPW34 test}
-The instrumentation was similar as before, but BPW34 had to be operated at lower bias voltage - 20 V.
+The instrumentation was similar as before, but BPW34 had to be operated at lower bias voltage and thus 20 V was chosen as an optimum.
 
 \begin{figure}[H]
  \centering
@@ -127,11 +127,11 @@ The instrumentation was similar as before, but BPW34 had to be operated at lower
  
 \end{figure}
 
-The measured spectra of BPW34 is very similar to the previous one, however the peak's heights are about 25 times lower.
+The measured spectra of BPW34 is very similar to the previous one, however the peak's heights are approximately 25 times lower.
 
-It is surprising that this cheap photodiode is capable of capturing gamma rays with sufficient energy resolution. The efficiency is lower than S14605 about .
+It is surprising that this cheap photodiode is capable of capturing gamma rays with sufficient energy resolution.
 \subsection{OPF430 test}
-OPF430 was operated on 20 V. There was a problem with the very low detection efficiency, so the source had to be put into the shielding box right before the photodiode.
+OPF430 was operated at 20 V. There was a problem with the very low detection efficiency, so the source had to be put into the shielding box right before the photodiode.
 
 \begin{figure}[H]
  \centering
