--- a/bp_dp.tex
+++ b/bp_dp.tex
@@ -67,13 +67,14 @@ spectroscopy.}
 \newcommand{\konzultant}{Mgr. Leo Schlattauer Ph.D.}
 
 \newcommand{\abstrakt}{%
-Holy moly kihsdlngleiodnglkdngdsrg}
+Tato práce je věnována vývoji polovodičového detektoru pro nízkoenergetické gamma fotony. Popisuje testování PIN fotodiod, vývoj analogových elektornických obvodů pro gamma a Mössbauerovu spektroskopii a taktéž se zabývá komparačními měřeními mezi polovodičovými detektory a jinými typy detektorů.}
 % -----------------------------------------------
 \newcommand{\abstrakten}{%
-Holy moly kihsdlngleiodnglkdngdsrg}
+This thesis is dedicated to the development of
+of semiconductor detectors for low energy gamma photons. It describes the testing of PIN photodiodes, the development of analog electronic circuits for the purposes gamma and Mössbauer spectroscopy and also deals with comparative measurements between semiconductor detectors and other types of detectors.}
 % klíčová slova
-\newcommand{\klic}{}
-\newcommand{\klicen}{}
+\newcommand{\klic}{PIN fotodioda, PCB, MS, gamma spektrum, předzesilovač}
+\newcommand{\klicen}{PIN photodiode, PCB, MS, gamma spectrum, preamplifier}
 \newcommand{\pocetstran}{	
 \pageref{LastPage}}
 \newcommand{\pocetpriloh}{1}
@@ -177,7 +178,7 @@ Study program: &\program\\
 Field of study: &\obor\\
 Form of study:& Full-time\\
 Supervisor:& \vedouci\\
-Deadline:& April~\rokod
+Deadline:& May~\rokod
 \end{tabular}
 \end{center}
 %----Vdek------------------------------------------------------
@@ -187,6 +188,7 @@ Deadline:& April~\rokod
 \vfill
 \noindent
 
+I would like to thank my supervisor Mgr. Aleš Stejskal Ph.D. for his support, guidance and feedback during the whole process of writing this thesis. I would also like to thank my former supervisor Mgr. Leo Schlattauer Ph.D. for the necessary support at the very beginning of the work on the experimental part of this thesis.
 
 
 % ---------------------------------------------------------------
