--- a/pulseAnalysis.tex
+++ b/pulseAnalysis.tex
@@ -28,7 +28,7 @@ In case of sensitive analog signal circuits, the electromagnetic shielding is a 
 \begin{figure}[H]
  \centering
  \includegraphics[scale=0.35, angle = 0]{./pictures/shielding.png}
- \caption{Schematic of correct and wrong connection of shielding \cite{appCSPnote}.}
+ \caption{Schematic of wrong and correct connection of shielding \cite{appCSPnote}.}
  \label{shielding}
  
 \end{figure}
