--- a/PCBconstruct.tex
+++ b/PCBconstruct.tex
@@ -1,15 +1,15 @@
 \chapter{Design of integrated amplifier}
 The only way to improve the performance of the spectrometric chain is to integrate the amplification part and a shaper into a small PCB - short the signal routes, reduce parasitic capacitances at preamplifier input and improve the shielding. The various prototypes were designed as double-sided PCBs and manufactured by using the milling machine for PCB to remove cooper from cuprextit plates. The PCB consisting mainly of surface mount deposition (SMD) parts was then assembled by manual soldering.
 
-\section{Scheme and Layout}
+\section{Scheme and layout}
 The main parts of spectrometric chain integrated PCB are: photodiode input connector, preamplifier, second stage amplifier, shaper module, output buffer optimized for 50\nobreakspace$\Omega$ transmission line, bipolar voltage supply for modules and bias voltage supply for photodiode. To surround the sensitive parts with sufficient shielding, the PCB is placed into aluminium box with drilled photodiode window. The full schematic of the integrated amplifier can be seen in the Fig. \ref{schematic} and the real layout for PCB can be seen in the Figures \ref{layout top} and \ref{layout bottom}.
 
 
 
 \begin{figure}[H]
  \centering
- \includegraphics[scale=0.35, angle = 0]{./pictures/NoPicture.jpg}
- \caption{PCB in aluminium box.}
+ \includegraphics[scale=0.1, angle = 0]{./pictures/SemiInCrateInside.png}
+ \caption{Fully assembled PCB with attached cremat modules inside the shielding box.}
  \label{PCBbox}
  
 \end{figure}
@@ -17,8 +17,8 @@ The main parts of spectrometric chain integrated PCB are: photodiode input conne
 
 \begin{figure}[H]
  \centering
- \includegraphics[scale=0.35, angle = 0]{./pictures/NoPicture.jpg}
- \caption{Fully assembled PCB with attached cremat modules.}
+ \includegraphics[scale=0.1, angle = 0]{./pictures/SemiInCrate.png}
+ \caption{PCB in aluminium box with attached peltier coolers.}
  \label{PCBphyss}
  
 \end{figure}
